# Unit-TestBasics

./: README.md
Exercises/: README.txt
Exercises/SRC/: CMakeLists.txt  DriverDistractionStatus.c  MathOps.hpp  SpeedControl.c  Utils.cpp  VehicleInfo.c  VehicleInfo.h  Week.cpp  main.c
Exercises/TEST/: CMakeLists.txt
Exercises/TEST/googletest/: ReadME.txt
Exercises/TEST/testDriverDistractionStatus/: CMakeLists.txt  test_DDSStatus.cpp
Exercises/TEST/testMathOps/: CMakeLists.txt
Exercises/TEST/testSpeedControl/: test_SpeedControl.cpp
Exercises/TEST/testVehicleInfo/: test_VehicleInfo.cpp
Exercises/TEST/testVehicleInfo/fake/: AccessMemory.h
Exercises/TEST/testVehicleInfo/mock/: mockVehicleInfo.cpp
Exercises/TEST/testWeek/: test_Week.cpp  test_Week_TestFixture.cpp
ExercisesHalfCompleate/SRC/: DriverDistractionStatus.h  MathOps.cpp  SpeedControl.h  Utils.hpp  Week.hpp  main.cpp
ExercisesHalfCompleate/TEST/testDriverDistractionStatus/: test_DDSStatus.cpp
ExercisesHalfCompleate/TEST/testMathOps/: test_MathOps.cpp
ExercisesHalfCompleate/TEST/testMathOps/mock/: mockMathOps.cpp  mockMathOps.hpp
ExercisesHalfCompleate/TEST/testSpeedControl/: CMakeLists.txt
ExercisesHalfCompleate/TEST/testVehicleInfo/: CMakeLists.txt  test_VehicleInfo.cpp
ExercisesHalfCompleate/TEST/testVehicleInfo/mock/: mockVehicleInfo.hpp
ExercisesHalfCompleate/TEST/testWeek/: CMakeLists.txt  test_Week.cpp
